# heart-disease-project

./: README.md  app.py  heart_disease_model.pkl  pyproject.toml  scaler.pkl
notebook/: cuaderno.ipynb
streamlit/: app.py
