[tool.poetry]
name = "heart-disease-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
ipykernel = "^6.29.5"
numpy = "^2.2.2"
flask = "^3.1.0"
jupyter = "^1.1.1"
notebook = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
